# server/src/buddy/auth/router.py
@@ -5,7 +5,7 @@ from fastapi import APIRouter, Depends, Form
 from pydantic import EmailStr
 
 from buddy.auth.controller import AuthControllable, get_auth_controller
-from buddy.auth.schemas import RegisterResponse
+from buddy.auth.schemas import LoginResponse, RegisterResponse
 
 auth_router = APIRouter(prefix="/auth")
 
@@ -17,3 +17,12 @@ def register(
     controller: Annotated[AuthControllable, Depends(get_auth_controller)],
 ) -> RegisterResponse:
     return controller.register(email=email, password=password)
+
+
+@auth_router.post("/login", status_code=HTTPStatus.OK)
+def login(
+    email: Annotated[EmailStr, Form()],
+    password: Annotated[str, Form()],
+    controller: Annotated[AuthControllable, Depends(get_auth_controller)],
+) -> LoginResponse:
+    return controller.login(email=email, password=password)
